testdata/baselines/reference/submodule/compiler/classFieldSuperAccessibleJs1.errors.txt
index.js(4,3): error TS2551: Property 'blah2' does not exist on type '{ new(): C; blah1: number; prototype: C; }'. Did you mean 'blah1'?
index.js(9,23): error TS2551: Property 'blah2' does not exist on type '{ new(): C; blah1: number; prototype: C; }'. Did you mean 'blah1'?


==== index.js (2 errors) ====
    class C {
      static blah1 = 123;
    }
    C.blah2 = 456;
      ~~~~~
!!! error TS2551: Property 'blah2' does not exist on type '{ new(): C; blah1: number; prototype: C; }'. Did you mean 'blah1'?
!!! related TS2728 index.js:2:10: 'blah1' is declared here.
    
    class D extends C {
      static {
        console.log(super.blah1);
        console.log(super.blah2);
                          ~~~~~
!!! error TS2551: Property 'blah2' does not exist on type '{ new(): C; blah1: number; prototype: C; }'. Did you mean 'blah1'?
!!! related TS2728 index.js:2:10: 'blah1' is declared here.
      }
    }
    